# federation

./: .bazelrc  .gitignore  API Guide.md  APIGUIDE.md  BUILD  BUILD.bazel  MODULE.bazel  README.md  REFERENCE.md  Readme.md  buf.yaml  federation.proto  go.mod  go.sum  readme.md  tools.go
.github/workflows/: main.yml  signoff.yml
docs/: API_REFERENCE.md  GLOSSARY.md  REFERENCE.md
examples/: BUILD.bazel  MODULE.bazel  main.go
examples/golang/cosmicconnector/: BUILD.bazel  README.md  main.go
examples/golang/cosmicconnector/config/: BUILD.bazel  config.go  config.proto  doc.go
examples/golang/cosmicconnector/example/: BUILD.bazel  README.md  main.go
examples/golang/cosmicconnector/example/handler/: BUILD.bazel
examples/golang/cosmicconnector/handler/: BUILD.bazel  handler.go  handler_test.go
examples/golang/simpleinterconnectprovider/: BUILD.bazel  README.md  main.go
examples/golang/simpleinterconnectprovider/config/: BUILD.bazel  config.go  config.proto
examples/golang/simpleinterconnectprovider/handler/: BUILD.bazel  handler.go  handler_test.go
outernet/federation/interconnect/v1alpha/: BUILD.bazel  api-linter-test.sh  buf.yaml  interconnect.proto
outernet/federation/v1alpha/: BUILD.bazel  buf.yaml  federation.proto
pkg/go/: README.md
pkg/go/auth/: BUILD.bazel  auth.go  auth_test.go  doc.go  serverauth.go  serverauth_test.go
pkg/go/cosmicconnector/: BUILD  cosmicconnector.go
pkg/go/handler/: BUILD.bazel  handler.go
pkg/go/integration_test/: BUILD.bazel  integration.go
pkg/go/interconnectprovider/: BUILD  interconnectprovider.go
pkg/go/server/: BUILD.bazel  channelz_server.go  doc.go  grpc_server.go  pprof_server.go  server.go
