# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "org_outernet_federation",
    version = "1.0.0",
    compatibility_level = 1,
    # compatibility_level history
    # 1 -> version 1.x.x initial release
)

bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "org_outernetcouncil_nmts", version = "v1.0.0-alpha.2")
git_override(
    module_name = "org_outernetcouncil_nmts",
    commit = "657c8a1a3b16fca348248c95c9cdb90119bf3b74",
    remote = "https://github.com/outernetcouncil/nmts.git",
)

bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.49.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:zWnc1Vrcno+lHZCOofnIMvycFcc0QRGIzm9dhnDX68E=",
    version = "v1.67.1",
)
go_deps.module(
    path = "github.com/rs/zerolog",
    sum = "h1:keLypqrlIjaFsbmJOBdB/qvyF8KEtCWHwobLp5l/mQ0=",
    version = "v1.32.0",
)
go_deps.module(
    path = "github.com/mattn/go-colorable",
    sum = "h1:fFA4WZxdEF4tXPZVKMLwD8oUnCTTo08duU7wxecdEvA=",
    version = "v0.1.13",
)
go_deps.module(
    path = "github.com/mattn/go-isatty",
    sum = "h1:xfD0iDuEKnDkl03q4limB+vH+GxLEtL/jb4xVJSWWEY=",
    version = "v0.0.20",
)
go_deps.module(
    path = "golang.org/x/sync",
    sum = "h1:3NFvSEYkUoMifnESzZl15y791HH1qU2xm6eCJU5ZPXQ=",
    version = "v0.8.0",
)
go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:ofyhxvXcZhMsU5ulbFiLKl/XBFqE1GSq7atu8tAmTRI=",
    version = "v0.6.0",
)
go_deps.module(
    path = "github.com/googleapis/api-linter",
    sum = "h1:sW/y+bPF9vHKDF0BlflyOSMJNNsGipZSoG64egByV0s=",
    version = "v1.68.0",
)
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_github_googleapis_api_linter",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_isatty",
    "com_github_rs_zerolog",
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)
