# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "org_outernet_federation",
    version = "1.0.0",
    compatibility_level = 1,
    # compatibility_level history
    # 1 -> version 1.x.x initial release
)

bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "org_outernetcouncil_nmts", version = "v1.0.0-alpha.2")
git_override(
    module_name = "org_outernetcouncil_nmts",
    commit = "657c8a1a3b16fca348248c95c9cdb90119bf3b74",
    remote = "https://github.com/outernetcouncil/nmts.git",
)

bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.49.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "google.golang.org/grpc",
    sum = "h1:zWnc1Vrcno+lHZCOofnIMvycFcc0QRGIzm9dhnDX68E=",
    version = "v1.67.1",
)
go_deps.module(
    path = "github.com/rs/zerolog",
    sum = "h1:keLypqrlIjaFsbmJOBdB/qvyF8KEtCWHwobLp5l/mQ0=",
    version = "v1.32.0",
)
go_deps.module(
    path = "github.com/mattn/go-colorable",
    sum = "h1:fFA4WZxdEF4tXPZVKMLwD8oUnCTTo08duU7wxecdEvA=",
    version = "v0.1.13",
)
go_deps.module(
    path = "github.com/mattn/go-isatty",
    sum = "h1:xfD0iDuEKnDkl03q4limB+vH+GxLEtL/jb4xVJSWWEY=",
    version = "v0.0.20",
)
go_deps.module(
    path = "golang.org/x/sync",
    sum = "h1:3NQrjDixjgGwUOCaF8w2+VYHv0Ve/vGYSbdkTa98gmQ=",
    version = "v0.10.0",
)
go_deps.module(
    path = "github.com/google/go-cmp",
    sum = "h1:ofyhxvXcZhMsU5ulbFiLKl/XBFqE1GSq7atu8tAmTRI=",
    version = "v0.6.0",
)
go_deps.module(
    path = "github.com/googleapis/api-linter",
    sum = "h1:sW/y+bPF9vHKDF0BlflyOSMJNNsGipZSoG64egByV0s=",
    version = "v1.68.0",
)
# Dependencies of api-lint
go_deps.module(
    path = "honnef.co/go/tools",
    sum = "h1:oFEHCKeID7to/3autwsWfnuv69j3NsfcXbvJKuIcep8=",
    version = "v0.4.6",
)

go_deps.module(
    path = "github.com/bmatcuk/doublestar/v4",
    sum = "h1:fdDeAqgT47acgwd9bd9HxJRDmc9UAmPpc+2m0CXv75Q=",
    version = "v4.7.1",
)

go_deps.module(
    path = "github.com/bufbuild/protocompile",
    sum = "h1:iA73zAf/fyljNjQKwYzUHD6AD4R8KMasmwa/FBatYVw=",
    version = "v0.14.1",
)

go_deps.module(
    path = "github.com/BurntSushi/toml",
    sum = "h1:o7IhLm0Msx3BaB+n3Ag7L8EVlByGnpq14C4YWiu/gL8=",
    version = "v1.3.2",
)

go_deps.module(
    path = "github.com/census-instrumentation/opencensus-proto",
    sum = "h1:iKLQ0xPNFxR/2hzXZMrBo8f1j86j5WHzznCCQxV/b8g=",
    version = "v0.4.1",
)

go_deps.module(
    path = "github.com/cespare/xxhash/v2",
    sum = "h1:UL815xU9SqsFlibzuggzjXhog7bL6oX9BbNZnL2UFvs=",
    version = "v2.3.0",
)

go_deps.module(
    path = "github.com/cncf/xds/go",
    sum = "h1:N+3sFI5GUjRKBi+i0TxYVST9h4Ie192jJWpHvthBBgg=",
    version = "v0.0.0-20240723142845-024c85f92f20",
)

go_deps.module(
    path = "github.com/davecgh/go-spew",
    sum = "h1:vj9j/u1bqnvCEfJOwUhtlOARqs3+rkHYY13jYWTU97c=",
    version = "v1.1.1",
)

go_deps.module(
    path = "github.com/envoyproxy/go-control-plane",
    sum = "h1:HzkeUz1Knt+3bK+8LG1bxOO/jzWZmdxpwC51i202les=",
    version = "v0.13.0",
)

go_deps.module(
    path = "github.com/envoyproxy/protoc-gen-validate",
    sum = "h1:tntQDh69XqOCOZsDz0lVJQez/2L6Uu2PdjCQwWCJ3bM=",
    version = "v1.1.0",
)

go_deps.module(
    path = "github.com/felixge/httpsnoop",
    sum = "h1:NFTV2Zj1bL4mc9sqWACXbQFVBBg2W3GPvqp8/ESS2Wg=",
    version = "v1.0.4",
)

go_deps.module(
    path = "github.com/gertd/go-pluralize",
    sum = "h1:M3uASbVjMnTsPb0PNqg+E/24Vwigyo/tvyMTtAlLgiA=",
    version = "v0.2.1",
)

go_deps.module(
    path = "github.com/go-logr/logr",
    sum = "h1:6pFjapn8bFcIbiKo3XT4j/BhANplGihG6tvd+8rYgrY=",
    version = "v1.4.2",
)

go_deps.module(
    path = "github.com/go-logr/stdr",
    sum = "h1:hSWxHoqTgW2S2qGc0LTAI563KZ5YKYRhT3MFKZMbjag=",
    version = "v1.2.2",
)

go_deps.module(
    path = "github.com/golang/glog",
    sum = "h1:1+mZ9upx1Dh6FmUTFR1naJ77miKiXgALjWOZ3NVFPmY=",
    version = "v1.2.2",
)

go_deps.module(
    path = "github.com/golang/groupcache",
    sum = "h1:oI5xCqsCo564l8iNU+DwB5epxmsaqB+rhGL0m5jtYqE=",
    version = "v0.0.0-20210331224755-41bb18bfe9da",
)

go_deps.module(
    path = "github.com/golang/protobuf",
    sum = "h1:i7eJL8qZTpSEXOPTxNKhASYpMn+8e5Q6AdndVa1dWek=",
    version = "v1.5.4",
)

go_deps.module(
    path = "github.com/google/s2a-go",
    sum = "h1:zZDs9gcbt9ZPLV0ndSyQk6Kacx2g/X+SKYovpnz3SMM=",
    version = "v0.1.8",
)

go_deps.module(
    path = "github.com/google/uuid",
    sum = "h1:NIvaJDMOsjHA8n1jAhLSgzrAzy1Hgr+hNrb57e+94F0=",
    version = "v1.6.0",
)

go_deps.module(
    path = "github.com/googleapis/api-linter",
    sum = "h1:sW/y+bPF9vHKDF0BlflyOSMJNNsGipZSoG64egByV0s=",
    version = "v1.68.0",
)

go_deps.module(
    path = "github.com/googleapis/enterprise-certificate-proxy",
    sum = "h1:XYIDZApgAnrN1c855gTgghdIA6Stxb52D5RnLI1SLyw=",
    version = "v0.3.4",
)

go_deps.module(
    path = "github.com/googleapis/gax-go/v2",
    sum = "h1:yitjD5f7jQHhyDsnhKEBU52NdvvdSeGzlAnDPT0hH1s=",
    version = "v2.13.0",
)

go_deps.module(
    path = "github.com/jhump/gopoet",
    sum = "h1:gYjOPnzHd2nzB37xYQZxj4EIQNpBrBskRqQQ3q4ZgSg=",
    version = "v0.1.0",
)

go_deps.module(
    path = "github.com/jhump/goprotoc",
    sum = "h1:Y1UgUX+txUznfqcGdDef8ZOVlyQvnV0pKWZH08RmZuo=",
    version = "v0.5.0",
)

go_deps.module(
    path = "github.com/jhump/protoreflect",
    sum = "h1:54fZg+49widqXYQ0b+usAFHbMkBGR4PpXrsHc8+TBDg=",
    version = "v1.16.0",
)

go_deps.module(
    path = "github.com/lithammer/dedent",
    sum = "h1:VNzHMVCBNG1j0fh3OrsFRkVUwStdDArbgBWoPAffktY=",
    version = "v1.1.0",
)

go_deps.module(
    path = "github.com/mattn/go-runewidth",
    sum = "h1:Lm995f3rfxdpd6TSmuVCHVb/QhupuXlYr8sCI/QdE+0=",
    version = "v0.0.9",
)

go_deps.module(
    path = "github.com/olekukonko/tablewriter",
    sum = "h1:P2Ga83D34wi1o9J6Wh1mRuqd4mF/x/lgBS7N7AbDhec=",
    version = "v0.0.5",
)

go_deps.module(
    path = "github.com/planetscale/vtprotobuf",
    sum = "h1:GFCKgmp0tecUJ0sJuv4pzYCqS9+RGSn52M3FUwPs+uo=",
    version = "v0.6.1-0.20240319094008-0393e58bdf10",
)

go_deps.module(
    path = "github.com/pmezard/go-difflib",
    sum = "h1:4DBwDE0NGyQoBHbLQYPwSUPoCMWR5BEzIk/f1lZbAQM=",
    version = "v1.0.0",
)

go_deps.module(
    path = "github.com/spf13/pflag",
    sum = "h1:iy+VFUOCP1a+8yFto/drg2CJ5u0yRoB7fZw3DKv/JXA=",
    version = "v1.0.5",
)

go_deps.module(
    path = "github.com/stoewer/go-strcase",
    sum = "h1:g0eASXYtp+yvN9fK8sH94oCIk0fau9uV1/ZdJ0AVEzs=",
    version = "v1.3.0",
)

go_deps.module(
    path = "github.com/stretchr/objx",
    sum = "h1:1zr/of2m5FGMsad5YfcqgdqdWrIhu+EBEJRhR1U7z/c=",
    version = "v0.5.0",
)

go_deps.module(
    path = "github.com/stretchr/testify",
    sum = "h1:HtqpIVDClZ4nwg75+f6Lvsy/wHu+3BoSGCbBAcpTsTg=",
    version = "v1.9.0",
)

go_deps.module(
    path = "cloud.google.com/go",
    sum = "h1:B3fRrSDkLRt5qSHWe40ERJvhvnQwdZiHu0bJOpldweE=",
    version = "v0.116.0",
)

go_deps.module(
    path = "cloud.google.com/go/auth",
    sum = "h1:BmtbpNQozo8ZwW2t7QJjnrQtdganSdmqeIBxHxNkEZQ=",
    version = "v0.9.9",
)

go_deps.module(
    path = "cloud.google.com/go/auth/oauth2adapt",
    sum = "h1:0GWE/FUsXhf6C+jAkWgYm7X9tK8cuEIfy19DBn6B6bY=",
    version = "v0.2.4",
)

go_deps.module(
    path = "cloud.google.com/go/compute/metadata",
    sum = "h1:UxK4uu/Tn+I3p2dYWTfiX4wva7aYlKixAHn3fyqngqo=",
    version = "v0.5.2",
)

go_deps.module(
    path = "cloud.google.com/go/longrunning",
    sum = "h1:A2q2vuyXysRcwzqDpMMLSI6mb6o39miS52UEG/Rd2ng=",
    version = "v0.6.3",
)

go_deps.module(
    path = "cel.dev/expr",
    sum = "h1:yloc84fytn4zmJX2GU3TkXGsaieaV7dQ057Qs4sIG2Y=",
    version = "v0.16.0",
)

go_deps.module(
    path = "gopkg.in/check.v1",
    sum = "h1:yhCVgyC4o1eVCa2tZl7eS0r+SDo693bJlVdllGtEeKM=",
    version = "v0.0.0-20161208181325-20d25e280405",
)

go_deps.module(
    path = "gopkg.in/yaml.v3",
    sum = "h1:fxVm/GzAzEWqLHuvctI91KS9hhNmmWOoWu0XTYJS7CA=",
    version = "v3.0.1",
)

go_deps.module(
    path = "go.opencensus.io",
    sum = "h1:y73uSU6J157QMP2kn2r30vwW1A2W2WFwSCGnAVxeaD0=",
    version = "v0.24.0",
)

go_deps.module(
    path = "go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc",
    sum = "h1:r6I7RJCN86bpD/FQwedZ0vSixDpwuWREjW9oRMsmqDc=",
    version = "v0.54.0",
)

go_deps.module(
    path = "go.opentelemetry.io/contrib/instrumentation/net/http/otelhttp",
    sum = "h1:TT4fX+nBOA/+LUkobKGW1ydGcn+G3vRw9+g5HwCphpk=",
    version = "v0.54.0",
)

go_deps.module(
    path = "go.opentelemetry.io/otel",
    sum = "h1:PdomN/Al4q/lN6iBJEN3AwPvUiHPMlt93c8bqTG5Llw=",
    version = "v1.29.0",
)

go_deps.module(
    path = "go.opentelemetry.io/otel/metric",
    sum = "h1:vPf/HFWTNkPu1aYeIsc98l4ktOQaL6LeSoeV2g+8YLc=",
    version = "v1.29.0",
)

go_deps.module(
    path = "go.opentelemetry.io/otel/trace",
    sum = "h1:J/8ZNK4XgR7a21DZUAsbF8pZ5Jcw1VhACmnYt39JTi4=",
    version = "v1.29.0",
)

go_deps.module(
    path = "bitbucket.org/creachadair/stringset",
    sum = "h1:APD8dIoAzGv70a6p1oasPDjPwkp+ajszdgKyWUcNqo0=",
    version = "v0.0.12",
)

go_deps.module(
    path = "google.golang.org/api",
    sum = "h1:SrEeuwU3S11Wlscsn+LA1kb/Y5xT8uggJSkIhD08NAU=",
    version = "v0.203.0",
)

go_deps.module(
    path = "google.golang.org/genproto",
    sum = "h1:k48HcZ4FE6in0o8IflZCkc1lTc2u37nhGd8P+fo4r24=",
    version = "v0.0.0-20241209162323-e6fa225c2576",
)

go_deps.module(
    path = "google.golang.org/genproto/googleapis/api",
    sum = "h1:CkkIfIt50+lT6NHAVoRYEyAvQGFM7xEwXUUywFvEb3Q=",
    version = "v0.0.0-20241209162323-e6fa225c2576",
)

go_deps.module(
    path = "google.golang.org/genproto/googleapis/rpc",
    sum = "h1:IfdSdTcLFy4lqUQrQJLkLt1PB+AsqVz6lwkWPzWEz10=",
    version = "v0.0.0-20241206012308-a4fef0638583",
)

go_deps.module(
    path = "google.golang.org/protobuf",
    sum = "h1:8Ar7bF+apOIoThw1EdZl0p1oWvMqTHmpA2fRTyZO8io=",
    version = "v1.35.2",
)

go_deps.module(
    path = "golang.org/x/crypto",
    sum = "h1:L5SG1JTTXupVV3n6sUqMTeWbjAyfPwoda2DLX8J8FrQ=",
    version = "v0.29.0",
)

go_deps.module(
    path = "golang.org/x/exp/typeparams",
    sum = "h1:UhRVJ0i7bF9n/Hd8YjW3eKjlPVBHzbQdxrBgjbSKl64=",
    version = "v0.0.0-20231219180239-dc181d75b848",
)

go_deps.module(
    path = "golang.org/x/mod",
    sum = "h1:zY54UmvipHiNd+pm+m0x9KhZ9hl1/7QNMyxXbc6ICqA=",
    version = "v0.17.0",
)

go_deps.module(
    path = "golang.org/x/net",
    sum = "h1:68CPQngjLL0r2AlUKiSxtQFKvzRVbnzLwMUn5SzcLHo=",
    version = "v0.31.0",
)

go_deps.module(
    path = "golang.org/x/oauth2",
    sum = "h1:PbgcYx2W7i4LvjJWEbf0ngHV6qJYr86PkAV3bXdLEbs=",
    version = "v0.23.0",
)

go_deps.module(
    path = "golang.org/x/sys",
    sum = "h1:wBqf8DvsY9Y/2P8gAfPDEYNuS30J4lPHJxXSb/nJZ+s=",
    version = "v0.27.0",
)

go_deps.module(
    path = "golang.org/x/term",
    sum = "h1:WEQa6V3Gja/BhNxg540hBip/kkaYtRg3cxg4oXSw4AU=",
    version = "v0.26.0",
)

go_deps.module(
    path = "golang.org/x/text",
    sum = "h1:zyQAAkrwaneQ066sspRyJaG9VNi/YJ1NfzcGB3hZ/qo=",
    version = "v0.21.0",
)

go_deps.module(
    path = "golang.org/x/time",
    sum = "h1:ntUhktv3OPE6TgYxXWv9vKvUSJyIFJlyohwbkEwPrKQ=",
    version = "v0.7.0",
)

go_deps.module(
    path = "golang.org/x/tools",
    sum = "h1:vU5i/LfpvrRCpgM/VPfJLg5KjxD3E+hfT1SH+d9zLwg=",
    version = "v0.21.1-0.20240508182429-e35e4ccd0d2d",
)

go_deps.module(
    path = "golang.org/x/xerrors",
    sum = "h1:E7g+9GITq07hpfrRu66IVDexMakfv52eLZ2CXBWiKr4=",
    version = "v0.0.0-20191204190536-9bdfabe68543",
)


go_deps.gazelle_override(
    path = "github.com/bufbuild/protocompile",
    directives = [
        "gazelle:proto disable"
    ]
)

use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_github_googleapis_api_linter",
    "com_github_mattn_go_colorable",
    "com_github_mattn_go_isatty",
    "com_github_rs_zerolog",
    "org_golang_google_genproto",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
    # Dependencies of api-lint
    "co_honnef_go_tools",
    "com_github_bmatcuk_doublestar_v4",
    "com_github_bufbuild_protocompile",
    "com_github_burntsushi_toml",
    "com_github_census_instrumentation_opencensus_proto",
    "com_github_cespare_xxhash_v2",
    "com_github_cncf_xds_go",
    "com_github_davecgh_go_spew",
    "com_github_envoyproxy_go_control_plane",
    "com_github_envoyproxy_protoc_gen_validate",
    "com_github_felixge_httpsnoop",
    "com_github_gertd_go_pluralize",
    "com_github_go_logr_logr",
    "com_github_go_logr_stdr",
    "com_github_golang_glog",
    "com_github_golang_groupcache",
    "com_github_golang_protobuf",
    "com_github_google_s2a_go",
    "com_github_google_uuid",
    "com_github_googleapis_enterprise_certificate_proxy",
    "com_github_googleapis_gax_go_v2",
    "com_github_jhump_gopoet",
    "com_github_jhump_goprotoc",
    "com_github_jhump_protoreflect",
    "com_github_lithammer_dedent",
    "com_github_mattn_go_runewidth",
    "com_github_olekukonko_tablewriter",
    "com_github_planetscale_vtprotobuf",
    "com_github_pmezard_go_difflib",
    "com_github_spf13_pflag",
    "com_github_stoewer_go_strcase",
    "com_github_stretchr_objx",
    "com_github_stretchr_testify",
    "com_google_cloud_go",
    "com_google_cloud_go_auth",
    "com_google_cloud_go_auth_oauth2adapt",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_longrunning",
    "dev_cel_expr",
    "in_gopkg_check_v1",
    "in_gopkg_yaml_v3",
    "io_opencensus_go",
    "io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc",
    "io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_metric",
    "io_opentelemetry_go_otel_trace",
    "org_bitbucket_creachadair_stringset",
    "org_golang_google_api",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_x_crypto",
    "org_golang_x_exp_typeparams",
    "org_golang_x_mod",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_text",
    "org_golang_x_time",
    "org_golang_x_tools",
    "org_golang_x_xerrors",
)
