# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "org_outernet_federation",
    version = "1.0.0",
    compatibility_level = 1,
    # compatibility_level history
    # 1 -> version 1.x.x initial release
)

bazel_dep(name = "protobuf", version = "29.0")
bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_shell", version = "0.3.0")
bazel_dep(name = "org_outernetcouncil_nmts", version = "v1.0.0-alpha.2")
git_override(
    module_name = "org_outernetcouncil_nmts",
    commit = "7979a2477584b37846bc84f1376f96117d0161ea",
    remote = "https://github.com/outernetcouncil/nmts.git",
)

bazel_dep(name = "rules_buf", version = "0.3.0")

buf = use_extension("@rules_buf//buf:extensions.bzl", "buf")
buf.toolchains(version = "v1.49.0")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    version = "1.23.0",
)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(
    go_mod = "//:go.mod",
)
use_repo(
    go_deps,
    "com_github_google_go_cmp",
    "com_github_googleapis_api_linter",
    "com_github_rs_zerolog",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",  # this is important but for some reason not picked up by Gazelle
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_sync",
)
