# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "federation_example",
    embed = [":examples_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "examples_lib",
    srcs = ["main.go"],
    importpath = "github.com/outernetcouncil/federation/examples",
    visibility = ["//visibility:private"],
    deps = [
        "//outernet/federation/v1alpha:federation_go_grpc",
        "@org_golang_google_protobuf//proto",
    ],
)
