# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_binary(
    name = "simple_interconnect_provider",
    embed = [":simpleinterconnectprovider_lib"],
    pure = "on",
    static = "on",
    visibility = ["//visibility:public"],
)

go_library(
    name = "simpleinterconnectprovider_lib",
    srcs = ["main.go"],
    importpath = "github.com/outernetcouncil/federation/examples/golang/simpleinterconnectprovider/example",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/golang/simpleinterconnectprovider/config",
        "//examples/golang/simpleinterconnectprovider/handler",
        "//pkg/go/interconnectprovider",
        "//pkg/go/server",
        "@com_github_rs_zerolog//:zerolog",
    ],
)
