# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_buf//buf:defs.bzl", "buf_lint_test")

buf_lint_test(
    name = "federation_lint_test",
    targets = [":federation_proto"],
)

proto_library(
    name = "federation_proto",
    srcs = ["federation.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@googleapis//google/type:interval_proto",
        "@org_outernetcouncil_nmts//proto:nmts_proto",
        "@org_outernetcouncil_nmts//proto/types/geophys:motion_proto",
        "@org_outernetcouncil_nmts//proto/types/ietf:inet_proto",
        "@protobuf//:duration_proto",
    ],
)

go_proto_library(
    name = "federation_go_grpc",
    compilers = [
        "@rules_go//proto:go_proto",
        "@rules_go//proto:go_grpc_v2",
    ],
    importpath = "github.com/outernetcouncil/federation/gen/go/federation/v1alpha",
    protos = [":federation_proto"],
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto//googleapis/type/interval",
        "@org_outernetcouncil_nmts//proto:nmts_go_proto",
        "@org_outernetcouncil_nmts//proto/types/geophys:geophys_go_proto",
        "@org_outernetcouncil_nmts//proto/types/ietf:ietf_go_proto",
    ],
)
