# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "serverauth",
    srcs = ["serverauth.go"],
    importpath = "aalyria.com/spacetime/serverauth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@com_github_jonboulle_clockwork//:clockwork",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//reflection/grpc_reflection_v1",
        "@org_golang_google_grpc//status",
        "@org_golang_x_oauth2//:oauth2",
        "@org_golang_x_oauth2//jwt",
    ],
)

go_test(
    name = "serverauth_test",
    srcs = ["serverauth_test.go"],
    embed = [":serverauth"],
    tags = ["block-network"],
    deps = [
        "@com_github_jonboulle_clockwork//:clockwork",
    ],
)

go_library(
    name = "auth",
    srcs = [
        "doc.go",
        "serverauth.go",
    ],
    importpath = "github.com/outernetcouncil/federation/pkg/go/auth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "auth_test",
    srcs = ["serverauth_test.go"],
    embed = [":auth"],
    deps = [
        "@com_github_golang_jwt_jwt_v5//:jwt",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//reflection",
        "@org_golang_google_grpc//reflection/grpc_reflection_v1",
        "@org_golang_google_grpc//status",
    ],
)
