load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = ["integration.go"],
    importpath = "github.com/outernetcouncil/federation/pkg/go/integration_test",
    visibility = ["//visibility:public"],
    deps = [
        "//outernet/federation/interconnect/v1alpha:federation_interconnect_go_grpc",
        "//pkg/go/interconnectprovider",
        "//pkg/go/server",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//types/known/emptypb"
    ],
)
