# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "server",
    srcs = [
        "channelz_server.go",
        "doc.go",
        "grpc_server.go",
        "pprof_server.go",
        "server.go",
    ],
    importpath = "github.com/outernetcouncil/federation/pkg/go/server",
    deps = [
        "//:federation_go_grpc",
        "//pkg/go/handler",
        "@com_github_rs_zerolog//:zerolog",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//channelz/service",
        "@org_golang_google_grpc//reflection",
    ],
)
