# Copyright 2024 Outernet Council Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_go//go:def.bzl", "go_library", "go_test")

package(
    default_visibility = ["//examples/golang/cosmicconnector:__subpackages__"],
)

go_library(
    name = "handler",
    srcs = ["handler.go"],
    importpath = "github.com/outernetcouncil/federation/examples/golang/cosmicconnector/handler",
    deps = [
        "//outernet/federation/v1alpha:federation_go_grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_outernetcouncil_nmts//proto/types/ietf:ietf_go_proto",
    ],
)

go_test(
    name = "handler_test",
    size = "small",
    srcs = ["handler_test.go"],
    embed = [":handler"],
    deps = [
        "//outernet/federation/v1alpha:federation_go_grpc",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_cmp//cmp/cmpopts",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//testing/protocmp",
        "@org_outernetcouncil_nmts//proto/types/ietf:ietf_go_proto",
    ],
)
